--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node ./bin/www"
+    "bypass-db": "node ./bin/www bypass-db"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
